--- a/config.toml
+++ b/config.toml
@@ -9,9 +9,9 @@ ignoreErrors = ["error-disable-taxonomy"]
   blog = "/:slug/"
   tags = "/blog/:slug"
 [params]
-  description = "Home 页面的TDK描述内容"
+  description = "数据小动作，动机大文章。大家好，我是烧钱大队长，一个专注于数字营销的博主。让我们开启烧钱之旅吧。"
   favicon = "images/favicon.png"
-  title = "2022年跨境出海数字营销如何有效烧钱"
+  title = "跨境出海数字营销如何有效烧钱"
   dateFormat = "2006-01-02"
 [author]
   name = '烧钱大队长'
